Spring: Apply some transactionals